--- a/SNHTicketV2/SNHTicketV2.csproj
+++ b/SNHTicketV2/SNHTicketV2.csproj
@@ -48,8 +48,9 @@
     <Compile Include="Authentication\AuthProvider.cs" />
     <Compile Include="Authentication\UserAuthProvider.cs" />
     <Compile Include="Authentication\VipAuthProvider.cs" />
-    <Compile Include="OrderHandler\Order.cs" />
-    <Compile Include="OrderHandler\UserType.cs" />
+    <Compile Include="OrderManagement\Order.cs" />
+    <Compile Include="OrderManagement\OrderHandler.cs" />
+    <Compile Include="OrderManagement\UserType.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -57,7 +58,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="OrderHandler\Orders.xml" />
+    <Content Include="Resource\Orders.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
