--- a/SNHTicketV2/SNHTicketV2.csproj
+++ b/SNHTicketV2/SNHTicketV2.csproj
@@ -53,9 +53,10 @@
     <Compile Include="OrderManagement\UserType.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resource\ErrorMessage.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="Resource\App.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resource\Orders.xml" />
