--- a/SNHTicketV2/Resource/App.config
+++ b/SNHTicketV2/Resource/App.config
@@ -5,5 +5,6 @@
   </startup>
   <appSettings>
     <add key="MainEntryUrl" value="http://user.snh48.com/vip48.php?username={0}&amp;password={1}&amp;act=login&amp;_={2}"/>
+    <add key="StartTime" value="12/9/2016 11:00:00"/>
   </appSettings>
 </configuration>
